feat: adição das imagens

--- a/login/dashboard/meus-pedidos.html
+++ b/login/dashboard/meus-pedidos.html
@@ -22,8 +22,8 @@
         <section id="pedidos" class="section-container">
             <h2>Meus Pedidos</h2>
             <p class="section-subtitle">Aqui está o histórico de todas as suas compras.</p>
-            <div id="orders-container">
-                </div>
+            
+            <div id="orders-container"></div>
         </section>
     </main>
     
