--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -64,33 +64,35 @@
             <h2>Nossos Pacotes</h2>
             <p class="section-subtitle">Escolha um plano para começar e depois selecione suas marmitas favoritas no cardápio abaixo.</p>
             <div class="pacotes-grid">
-                <div class="pacote-card">
-                    <img src="https://images.unsplash.com/photo-1540420773420-3366772f4999?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 5 marmitas">
-                    <h3>Pacote Semanal</h3><h4>5 Marmitas</h4>
-                    <p>Ideal para garantir seus almoços saudáveis durante a semana.</p>
-                    <span class="price">R$ 99,90</span>
-                    <button class="btn btn-primary add-package-to-cart" data-price="99.90" data-name="Pacote Semanal" data-credits="5">Quero Esse</button>
-                </div>
-                <div class="pacote-card popular">
-                    <span class="tag">Mais Popular</span>
-                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 10 marmitas">
-                    <h3>Pacote Quinzenal</h3><h4>10 Marmitas</h4>
-                    <p>Economia e praticidade para duas semanas de alimentação equilibrada.</p>
-                    <span class="price">R$ 189,90</span>
-                    <button class="btn btn-primary add-package-to-cart" data-price="189.90" data-name="Pacote Quinzenal" data-credits="10">Quero Esse</button>
-                </div>
-                <div class="pacote-card">
-                    <img src="https://images.unsplash.com/photo-1565958011703-44f9829ba187?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 20 marmitas">
-                    <h3>Pacote Mensal</h3><h4>20 Marmitas</h4>
-                    <p>A solução completa para um mês inteiro sem se preocupar com as refeições.</p>
-                    <span class="price">R$ 359,90</span>
-                    <button class="btn btn-primary add-package-to-cart" data-price="359.90" data-name="Pacote Mensal" data-credits="20">Quero Esse</button>
-                </div>
-                <div class="pacote-card personalizado">
-                    <i class="fas fa-pencil-alt fa-3x"></i>
-                    <h3>Pacote Personalizado</h3><h4>Você no comando</h4>
-                    <p>Escolha quantas marmitas vão cuidar de você durante o mês.</p>
-                    <a href="#cardapio" class="btn btn-primary">Montar Agora</a>
+                <div class="pacotes-grid">
+                    <div class="pacote-card">
+                        <img src="https://images.unsplash.com/photo-1540420773420-3366772f4999?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 5 marmitas">
+                        <h3>Plano Praticidade</h3><h4>5 marmitas (semanal)</h4>
+                        <p>Ideal para garantir seus almoços saudáveis durante a semana.</p>
+                        <span class="price">R$ 99,90</span>
+                        <button class="btn btn-primary add-package-to-cart" data-price="99.90" data-name="Plano Praticidade" data-credits="5">Quero Esse</button>
+                    </div>
+                    <div class="pacote-card popular">
+                        <span class="tag">Mais Popular</span>
+                        <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 10 marmitas">
+                        <h3>Plano Constância</h3><h4>10 marmitas (quinzenal)</h4>
+                        <p>Economia e praticidade para duas semanas de alimentação equilibrada.</p>
+                        <span class="price">R$ 189,90</span>
+                        <button class="btn btn-primary add-package-to-cart" data-price="189.90" data-name="Plano Constância" data-credits="10">Quero Esse</button>
+                    </div>
+                    <div class="pacote-card">
+                        <img src="https://images.unsplash.com/photo-1565958011703-44f9829ba187?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 20 marmitas">
+                        <h3>Plano Equilíbrio</h3><h4>20 marmitas (mensal)</h4>
+                        <p>A solução completa para um mês inteiro sem se preocupar com as refeições.</p>
+                        <span class="price">R$ 359,90</span>
+                        <button class="btn btn-primary add-package-to-cart" data-price="359.90" data-name="Plano Equilíbrio" data-credits="20">Quero Esse</button>
+                    </div>
+                    <div class="pacote-card personalizado">
+                        <i class="fas fa-pencil-alt fa-3x"></i>
+                        <h3>Pacote Personalizado</h3><h4>Você no comando</h4>
+                        <p>Escolha quantas marmitas vão cuidar de você durante o mês.</p>
+                        <a href="#cardapio" class="btn btn-primary">Montar Agora</a>
+                    </div>
                 </div>
             </div>
             
@@ -116,10 +118,10 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="menu-slider">
-                    <div class="menu-item" data-name="Frango Grelhado">
-                        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Frango Grelhado">
-                        <h3>Frango Grelhado</h3>
-                        <p class="item-description">Delicioso filé de frango grelhado com purê de batata doce e brócolis frescos.</p>
+                    <div class="menu-item" data-name="Frango Grelhado com Arroz e Feijão Fradinho">
+                        <img src="/assets/prato1.png" alt="Frango Grelhado com Arroz e Feijão Fradinho">
+                        <h3>Filé de frango grelhado, arroz com cúrcuma e salada de feijão fradinho</h3>
+                        <p class="item-description">Delicioso filé de frango grelhado com arroz e um saboroso feijão fradinho.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -128,10 +130,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Salmão ao Forno">
-                        <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Salmão ao Forno">
-                        <h3>Salmão ao Forno</h3>
-                        <p class="item-description">Posta de salmão assada com ervas finas, acompanha arroz integral e legumes.</p>
+                    <div class="menu-item" data-name="Almôndegas com Macarrão">
+                        <img src="/assets/prato2.png" alt="Almôndegas com Macarrão">
+                        <h3>Almôndegas de patinho, macarrão de arroz (sem gluten) e mix de legumes</h3>
+                        <p class="item-description">Almôndegas de carne suculentas ao molho de tomate caseiro com macarrão fusilli.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
