feat: integração com firebase

--- a/checkout/finalizar-pedido.html
+++ b/checkout/finalizar-pedido.html
@@ -123,6 +123,11 @@
         <a href="../login/dashboard/dashboard.html"><i class="fas fa-arrow-left"></i> Voltar para a Loja</a>
     </footer>
 
-    <script src="checkout-script.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
+    <script src="../../firebase-config.js"></script>
+     <script src="checkout-script.js"></script>
 </body>
 </html>
