--- a/login/dashboard/meus-pedidos.html
+++ b/login/dashboard/meus-pedidos.html
@@ -32,6 +32,11 @@
         <p>&copy; 2025 Marmitas da Ka. Todos os direitos reservados.</p>
     </footer>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
+    <script src="../../firebase-config.js"></script>
     <script src="meus-pedidos-script.js"></script>
 </body>
 </html>
