feat: adicionei a função de admin

--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -129,9 +129,10 @@
                 </button>
                 <div class="menu-slider">
                     <div class="menu-item" data-name="Frango Grelhado com Arroz e Feijão Fradinho">
-                        <img src="/assets/prato1.png" alt="Frango Grelhado com Arroz e Feijão Fradinho">
-                        <h3>Filé de frango grelhado, arroz com cúrcuma e salada de feijão fradinho</h3>
-                        <p class="item-description">Delicioso filé de frango grelhado com arroz e um saboroso feijão fradinho.</p>
+                        <!-- ✅ Caminho e imagem corrigidos -->
+                        <img src="../../assets/prato1.png" alt="Frango Grelhado com Arroz e Feijão Fradinho">
+                        <h3>Frango Grelhado & Feijão Fradinho</h3>
+                        <p class="item-description">Suculento filé de frango grelhado, servido com arroz de açafrão e uma rica salada de feijão fradinho.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -140,10 +141,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Almôndegas com Macarrão">
-                        <img src="/assets/prato2.png" alt="Almôndegas com Macarrão">
-                        <h3>Almôndegas de patinho, macarrão de arroz (sem gluten) e mix de legumes</h3>
-                        <p class="item-description">Almôndegas de carne suculentas ao molho de tomate caseiro com macarrão fusilli.</p>
+                    <div class="menu-item" data-name="Almôndegas ao Sugo com Macarrão">
+                        <!-- ✅ Caminho e imagem corrigidos -->
+                        <img src="../../assets/prato2.png" alt="Almôndegas ao Sugo com Macarrão">
+                        <h3>Almôndegas ao Sugo & Fusilli</h3>
+                        <p class="item-description">Almôndegas de patinho ao molho de tomate artesanal, acompanhadas de macarrão fusilli e um mix de legumes frescos.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -152,10 +154,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Patinho Moído">
-                        <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Patinho Moído">
-                        <h3>Patinho Moído</h3>
-                        <p class="item-description">Carne de patinho moída e refogada, servida com macarrão integral.</p>
+                    <div class="menu-item" data-name="Peixe Branco com Arroz e Pimentos">
+                        <!-- ✅ Caminho e imagem corrigidos -->
+                        <img src="../../assets/prato3.png" alt="Peixe Branco com Arroz e Pimentos">
+                        <h3>Peixe Branco & Arroz de Coco</h3>
+                        <p class="item-description">Posta de peixe branco assado com ervas, sobre uma cama de arroz de coco e pimentos coloridos salteados.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -164,10 +167,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Lasanha de Berinjela">
-                        <img src="https://images.unsplash.com/photo-1606755962773-d324e0a13086?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Lasanha de Berinjela">
-                        <h3>Lasanha de Berinjela</h3>
-                        <p class="item-description">Lasanha de berinjela com queijo cottage e molho de tomate caseiro.</p>
+                    <div class="menu-item" data-name="Escondidinho de Frango com Batata Doce">
+                        <!-- ✅ Caminho e imagem corrigidos -->
+                        <img src="../../assets/prato4.png" alt="Escondidinho de Frango com Batata Doce">
+                        <h3>Escondidinho de Frango Fit</h3>
+                        <p class="item-description">Um clássico irresistível: frango desfiado cremoso, coberto com puré de batata doce e gratinado no ponto certo.</p>
+                        <div class="item-footer">
+                            <div class="quantity-selector">
+                                <button class="btn-qty minus" aria-label="Remover um">-</button>
+                                <span class="quantity">0</span>
+                                <button class="btn-qty plus" aria-label="Adicionar um">+</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-item" data-name="Frango em Cubos com Puré de Abóbora">
+                        <!-- ✅ NOVO ITEM com caminho e imagem corrigidos -->
+                        <img src="../../assets/prato5.jpeg" alt="Frango em cubos com arroz integral e puré de abóbora">
+                        <h3>Frango & Puré de Abóbora</h3>
+                        <p class="item-description">Cubos de frango tenros e bem temperados, servidos com arroz integral e um puré de abóbora aveludado.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
