--- a/login/login.html
+++ b/login/login.html
@@ -83,7 +83,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     
-    <script src="/firebase-config.js"></script> 
+    <script src="../firebase-config.js"></script> 
     
     <script src="login-script.js"></script>
 </body>
