feat: correção no index, melhorando posicionamento da foto perfil + correção do erro no botão de enviar dúvida no questionário

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </a>
 
     <footer>
-        <p>Criado com <i class="fas fa-heart"></i> por <a href="#" target="_blank">Dev.Guirocha</a></p>
+        <p>Criado com <i class="fas fa-heart"></i> por <a href="https://squadrockdev.com.br" target="_blank" rel="noopener noreferrer">Dev.Guirocha</a></p>
         <p>&copy; 2025 Marmitas da Ka. Todos os direitos reservados.</p>
     </footer>
 
