--- a/checkout/finalizar-pedido.html
+++ b/checkout/finalizar-pedido.html
@@ -17,7 +17,7 @@
         <div class="checkout-page-container" id="container">
             <div class="form-container cart-container">
                 <div class="form-header">
-                    <h2><i class="fas fa-shopping-cart"></i> Revise seu Pedido</h2>
+                    <h2><i class="fas fa-shopping-cart" aria-hidden="true"></i> Revise seu Pedido</h2>
                 </div>
                 <div class="form-content" id="cart-content">
                     <div id="cart-summary"><p class="loading">Carregando seu carrinho...</p></div>
@@ -31,7 +31,7 @@
                             <label class="payment-option" for="pix" data-method="pix">
                                 <input type="radio" id="pix" name="payment" value="pix" checked>
                                 <div class="payment-details">
-                                    <i class="fas fa-qrcode"></i>
+                                    <i class="fas fa-qrcode" aria-hidden="true"></i>
                                     <span>PIX</span>
                                     <small>Enviaremos a chave para o seu WhatsApp</small>
                                 </div>
@@ -39,7 +39,7 @@
                             <label class="payment-option" for="cash" data-method="cash">
                                 <input type="radio" id="cash" name="payment" value="cash">
                                 <div class="payment-details">
-                                    <i class="fas fa-money-bill-wave"></i>
+                                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
                                     <span>Dinheiro</span>
                                     <small>Pague na entrega com troco se precisar</small>
                                 </div>
@@ -52,22 +52,38 @@
             <div class="form-container delivery-container">
                 <form id="delivery-form">
                     <div class="form-header">
-                        <h2><i class="fas fa-map-marker-alt"></i> Dados da Entrega</h2>
+                        <h2><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Dados da Entrega</h2>
                     </div>
                     <div class="form-content">
                         <div class="delivery-notice">
                             <p>Entregas apenas em <strong>Aracaju, SE</strong>.</p>
                         </div>
                         <div style="position: relative;">
-                            <input type="tel" id="cep" placeholder="CEP" required maxlength="9">
+                            <label class="sr-only" for="cep">CEP</label>
+                            <input type="tel" id="cep" placeholder="CEP" required maxlength="9" aria-describedby="error-cep">
                             <div id="cep-spinner" class="spinner hidden"></div>
                         </div>
-                        <input type="text" id="endereco" placeholder="Endereço (Rua, Av.)" required>
+                        <span class="field-error" id="error-cep" role="alert" aria-live="polite"></span>
+
+                        <label class="sr-only" for="endereco">Endereço</label>
+                        <input type="text" id="endereco" placeholder="Endereço (Rua, Av.)" required aria-describedby="error-endereco">
+                        <span class="field-error" id="error-endereco" role="alert" aria-live="polite"></span>
+
                         <div class="form-row">
-                            <input type="text" id="numero" placeholder="Número" required>
-                            <input type="text" id="bairro" placeholder="Bairro" required>
+                            <div style="flex:1;">
+                                <label class="sr-only" for="numero">Número</label>
+                                <input type="text" id="numero" placeholder="Número" required aria-describedby="error-numero">
+                                <span class="field-error" id="error-numero" role="alert" aria-live="polite"></span>
+                            </div>
+                            <div style="flex:1;">
+                                <label class="sr-only" for="bairro">Bairro</label>
+                                <input type="text" id="bairro" placeholder="Bairro" required aria-describedby="error-bairro">
+                                <span class="field-error" id="error-bairro" role="alert" aria-live="polite"></span>
+                            </div>
                         </div>
-                        <input type="text" id="complemento" placeholder="Complemento (Apto, Bloco, etc.)">
+                        <label class="sr-only" for="complemento">Complemento</label>
+                        <input type="text" id="complemento" placeholder="Complemento (Apto, Bloco, etc.)" aria-describedby="error-complemento">
+                        <span class="field-error" id="error-complemento" role="alert" aria-live="polite"></span>
                         <div class="form-row" style="align-items: center; margin-bottom: 15px;">
                             <input type="checkbox" id="save-address" name="save-address" style="width: auto;">
                             <label for="save-address" style="margin-bottom: 0;">Guardar endereço para a próxima compra</label>
@@ -76,16 +92,18 @@
                         <div class="delivery-time">
                             <h3>Horário de Entrega</h3>
                             <div class="delivery-time-select">
-                                <i class="fas fa-clock"></i>
-                                <select id="delivery-time-select" required>
+                                <i class="fas fa-clock" aria-hidden="true"></i>
+                                <label class="sr-only" for="delivery-time-select">Horário de entrega</label>
+                                <select id="delivery-time-select" required aria-describedby="error-delivery">
                                     <option value="" disabled selected>Selecione um horário</option>
                                     <option value="manha">Manhã (08h - 12h)</option>
                                     <option value="tarde">Tarde (13h - 18h)</option>
                                     <option value="noite">Noite (18h - 22h)</option>
                                 </select>
                             </div>
+                            <span class="field-error" id="error-delivery" role="alert" aria-live="polite"></span>
                             <p class="delivery-time-hint">
-                                <i class="fas fa-info-circle"></i> A produção é entregue na segunda-feira subsequente. Ajustamos juntos qualquer detalhe pelo WhatsApp.
+                                <i class="fas fa-info-circle" aria-hidden="true"></i> A produção é entregue na segunda-feira subsequente. Ajustamos juntos qualquer detalhe pelo WhatsApp.
                             </p>
                         </div>
                         
@@ -112,7 +130,7 @@
     </div>
 
     <footer class="checkout-footer">
-        <a href="../login/dashboard/dashboard.html"><i class="fas fa-arrow-left"></i> Voltar para a Loja</a>
+        <a href="../login/dashboard/dashboard.html"><i class="fas fa-arrow-left" aria-hidden="true"></i> Voltar para a Loja</a>
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
