feat: Melhorias das fotos

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <div class="pacotes-grid">
                 <div class="pacote-card">
                   <picture>
-                    <source type="image/webp" srcset="assets/prato1.webp" />
-                    <img src="assets/prato1.png" width="600" height="400" loading="lazy" decoding="async" alt="Pacote com cinco marmitas saudáveis" />
+                    <source type="image/webp" srcset="assets/prato8.webp" />
+                    <img src="assets/prato8.jpeg" width="600" height="596" loading="lazy" decoding="async" alt="Plano semanal com pratos leves e balanceados" />
                   </picture>
                   <h3>Plano Praticidade</h3><h4>5 marmitas (semanal)</h4>
                   <p>Ideal para garantir seus almoços saudáveis durante a semana.</p>
@@ -72,8 +72,8 @@
                 <div class="pacote-card popular">
                   <span class="tag">Mais Popular</span>
                   <picture>
-                    <source type="image/webp" srcset="assets/prato2.webp" />
-                    <img src="assets/prato2.png" width="600" height="400" loading="lazy" decoding="async" alt="Pacote com dez marmitas variadas" />
+                    <source type="image/webp" srcset="assets/prato9.webp" />
+                    <img src="assets/prato9.jpeg" width="600" height="608" loading="lazy" decoding="async" alt="Plano quinzenal com refeições fit e controladas" />
                   </picture>
                   <h3>Plano Constância</h3><h4>10 marmitas (quinzenal)</h4>
                   <p>Economia e praticidade para duas semanas de alimentação equilibrada.</p>
@@ -83,8 +83,8 @@
             
                 <div class="pacote-card">
                   <picture>
-                    <source type="image/webp" srcset="assets/prato3.webp" />
-                    <img src="assets/prato3.png" width="600" height="590" loading="lazy" decoding="async" alt="Pacote com vinte marmitas coloridas e nutritivas" />
+                    <source type="image/webp" srcset="assets/prato7.webp" />
+                    <img src="assets/prato7.jpeg" width="600" height="677" loading="lazy" decoding="async" alt="Plano mensal com refeições funcionais e nutritivas" />
                   </picture>
                   <h3>Plano Equilíbrio</h3><h4>20 marmitas (mensal)</h4>
                   <p>A solução completa para um mês inteiro sem se preocupar com as refeições.</p>
