--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -69,7 +69,10 @@
             <div class="pacotes-grid">
                 <div class="pacotes-grid">
                     <div class="pacote-card">
-                        <img src="https://images.unsplash.com/photo-1540420773420-3366772f4999?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 5 marmitas">
+                        <picture>
+                            <source type="image/webp" srcset="../../assets/prato8.webp" />
+                            <img src="../../assets/prato8.jpeg" width="600" height="596" loading="lazy" decoding="async" alt="Pacote com cinco refeições fit e balanceadas">
+                        </picture>
                         <h3>Plano Praticidade</h3><h4>5 marmitas (semanal)</h4>
                         <p>Ideal para garantir seus almoços saudáveis durante a semana.</p>
                         <span class="price">R$ 99,90</span>
@@ -77,14 +80,20 @@
                     </div>
                     <div class="pacote-card popular">
                         <span class="tag">Mais Popular</span>
-                        <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 10 marmitas">
+                        <picture>
+                            <source type="image/webp" srcset="../../assets/prato9.webp" />
+                            <img src="../../assets/prato9.jpeg" width="600" height="608" loading="lazy" decoding="async" alt="Pacote com dez refeições equilibradas e saudáveis">
+                        </picture>
                         <h3>Plano Constância</h3><h4>10 marmitas (quinzenal)</h4>
                         <p>Economia e praticidade para duas semanas de alimentação equilibrada.</p>
                         <span class="price">R$ 189,90</span>
                         <button type="button" class="btn btn-primary add-package-to-cart" data-price="189.90" data-name="Plano Constância" data-credits="10" data-package-key="quinzenal">Quero Esse</button>
                     </div>
                     <div class="pacote-card">
-                        <img src="https://images.unsplash.com/photo-1565958011703-44f9829ba187?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Pacote de 20 marmitas">
+                        <picture>
+                            <source type="image/webp" srcset="../../assets/prato7.webp" />
+                            <img src="../../assets/prato7.jpeg" width="600" height="677" loading="lazy" decoding="async" alt="Pacote com vinte refeições funcionais e nutritivas">
+                        </picture>
                         <h3>Plano Equilíbrio</h3><h4>20 marmitas (mensal)</h4>
                         <p>A solução completa para um mês inteiro sem se preocupar com as refeições.</p>
                         <span class="price">R$ 359,90</span>
@@ -128,11 +137,10 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="menu-slider">
-                    <div class="menu-item" data-name="Frango Grelhado com Arroz e Feijão Fradinho">
-                        <!-- ✅ Caminho e imagem corrigidos -->
-                        <img src="../../assets/prato1.png" alt="Frango Grelhado com Arroz e Feijão Fradinho">
-                        <h3>Frango Grelhado & Feijão Fradinho</h3>
-                        <p class="item-description">Suculento filé de frango grelhado, servido com arroz de açafrão e uma rica salada de feijão fradinho.</p>
+                    <div class="menu-item" data-name="Frango grelhado com cúrcuma">
+                        <img src="../../assets/prato1.png" alt="Frango grelhado com arroz de cúrcuma e vinagrete de feijão-fradinho">
+                        <h3>Frango Grelhado com Cúrcuma</h3>
+                        <p class="item-description">Peito de frango grelhado, rico em proteína e baixo em gordura, servido com arroz de cúrcuma antioxidante e vinagrete de feijão-fradinho cheio de fibras.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -141,11 +149,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Almôndegas ao Sugo com Macarrão">
-                        <!-- ✅ Caminho e imagem corrigidos -->
-                        <img src="../../assets/prato2.png" alt="Almôndegas ao Sugo com Macarrão">
-                        <h3>Almôndegas ao Sugo & Fusilli</h3>
-                        <p class="item-description">Almôndegas de patinho ao molho de tomate artesanal, acompanhadas de macarrão fusilli e um mix de legumes frescos.</p>
+                    <div class="menu-item" data-name="Almôndegas de patinho com macarrão sem glúten">
+                        <img src="../../assets/prato2.png" alt="Almôndegas de patinho com macarrão sem glúten e legumes">
+                        <h3>Almôndegas de Patinho & Fusilli</h3>
+                        <p class="item-description">Almôndegas de patinho magro em molho artesanal, com massa sem glúten e seleta de legumes levinhos para manter a dieta em dia.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -154,11 +161,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Peixe Branco com Arroz e Pimentos">
-                        <!-- ✅ Caminho e imagem corrigidos -->
-                        <img src="../../assets/prato3.png" alt="Peixe Branco com Arroz e Pimentos">
-                        <h3>Peixe Branco & Arroz de Coco</h3>
-                        <p class="item-description">Posta de peixe branco assado com ervas, sobre uma cama de arroz de coco e pimentos coloridos salteados.</p>
+                    <div class="menu-item" data-name="Peixe ao molho de ervas com arroz de sementes">
+                        <img src="../../assets/prato3.png" alt="Peixe ao molho de ervas com arroz de sementes e mix de legumes">
+                        <h3>Peixe ao Molho de Ervas</h3>
+                        <p class="item-description">Filé de peixe ao forno com ervas frescas, arroz com sementes e mix de legumes para uma refeição leve e rica em ômega-3.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -167,11 +173,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Escondidinho de Frango com Batata Doce">
-                        <!-- ✅ Caminho e imagem corrigidos -->
-                        <img src="../../assets/prato4.png" alt="Escondidinho de Frango com Batata Doce">
-                        <h3>Escondidinho de Frango Fit</h3>
-                        <p class="item-description">Um clássico irresistível: frango desfiado cremoso, coberto com puré de batata doce e gratinado no ponto certo.</p>
+                    <div class="menu-item" data-name="Escondidinho de macaxeira com filé mignon suíno">
+                        <img src="../../assets/prato4.png" alt="Escondidinho de macaxeira com filé mignon suíno">
+                        <h3>Escondidinho de Macaxeira & Filé Mignon Suíno</h3>
+                        <p class="item-description">Versão leve do clássico: filé mignon suíno desfiado, purê suave de macaxeira e gratinado leve para matar a saudade sem sair da dieta.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -180,11 +185,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Frango em Cubos com Puré de Abóbora">
-                        <!-- ✅ NOVO ITEM com caminho e imagem corrigidos -->
-                        <img src="../../assets/prato5.jpeg" alt="Frango em cubos com arroz integral e puré de abóbora">
-                        <h3>Frango & Puré de Abóbora</h3>
-                        <p class="item-description">Cubos de frango tenros e bem temperados, servidos com arroz integral e um puré de abóbora aveludado.</p>
+                    <div class="menu-item" data-name="Cubos de frango com arroz integral e purê de abóbora">
+                        <img src="../../assets/prato5.jpeg" alt="Cubos de frango com arroz integral e purê de abóbora">
+                        <h3>Frango Integral & Purê Cremoso</h3>
+                        <p class="item-description">Frango em cubos temperado com ervas, arroz integral rico em fibras e purê de abóbora cremoso para energia limpa e saciedade.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
