--- a/login/signup.html
+++ b/login/signup.html
@@ -13,6 +13,13 @@
 
 <body class="auth-page signup-page">
     <div class="page-container">
+        <div class="brand" aria-hidden="true">
+            <div class="logo-icon"><i class="fas fa-utensils"></i></div>
+            <div>
+                <strong>Marmitas da Ka</strong><br/>
+                <small>Comida caseira quentinha</small>
+            </div>
+        </div>
         <div class="form-card">
             <header class="form-header">
                 <h1>Crie a sua conta</h1>
